correct layout + added coverflow

--- a/src/js/pages/Speedometer/style.scss
+++ b/src/js/pages/Speedometer/style.scss
@@ -12,88 +12,36 @@ body {
   background-color: #070c05;
 }
 
-.tachoContainerSyle{
-  position: relative;
-  width: 380px;
-  height: 380px;
-  margin: auto;
-}
-
 .tachoStyle {
   position: absolute;
-   width: 300px;
-   height: 300px;
-   //width: 100%;
-   //height: 100%;
-   //backgroundColor: yellow;
-   margin: auto;
-   top: 40px;
-   left: 48px;
-   z-index:  10;
+  width: 300px;
+  height: 300px;
+  //center horizontally & vretically
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .visualizerStyle {
   position: absolute;
-  margin-left: 40px;
-  margin-top: -217px;
-   //width: 300px;
-   //height: 300px;
-   //width: 100%;
-   //height: 100%;
-   //backgroundColor: yellow;
-   //margin: auto;
-   //top: 40px;
-   //left: 40px;
-   z-index:  11;
+  //center horizontally & vretically
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  z-index:  15;
 }
 
 .batteryStyle{
   position: absolute;
-   width: 380px;
-   height: 380px;
-   //width: 100%;
-   //height: 100%;
-   //backgroundColor: yellow;
-   margin: auto;
-   top: 0px;
-   left: 8px;
-   z-index:  10;
-}
-
-.containerStyle {
-  //background-color: blue;
-  width: 100%;
-}
-
-.backgroundStyle {
-  //height: 860px;
-  //width: 100%px;
-  //border: '2px'
-
-//  background-color: #070c05;
-}
-
-.verticalCentered {
-  //margin: 0;
-  //position: absolute;
-  //top: 50%;
-  -ms-transform: translateY(+50%);
-  transform: translateY(+50%);
-}
-
-.absoluteCenter {
-  width: 50%;
- height: 50%;
- overflow: auto;
- margin: auto;
- position: absolute;
- top: 0; left: 0; bottom: 0; right: 0;
- //border: solid black;
-}
-
-.centerContainer {
-  position: relative;
-  height: 100%;
+  width: 380px;
+  height: 380px;
+  z-index:  10;
+  //center horizontally & vretically
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index:  13;
 }
 
 .buttonStyle {
@@ -106,16 +54,27 @@ body {
   //font-weight: bold;
 }
 
-.divStyle {
-  //border: 8px solid red;
-  position: absolute;
-  height: 80px;
-  margin-top: 680px;
-  width: 200px;
-  margin-left: 550px;
-   z-index:  13;
-}
-
 .red {
   border: 8px solid red;
+}
+
+.coverflowContainer {
+  position: absolute;
+  height: 500px;
+  width: 960px;
+  z-index:  15;
+  top: -50%;
+  left: -100%;
+  margin: -250px 0 0 480px;
+
+}
+
+.heightTest {
+  position: absolute;
+  height: 200px;
+  width: 960px;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -135%);
+  z-index:  14;
 }
